--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
   <h1>hi</h1>
+  <p>A paragraph (from Ancient Greek παράγραφος (parágraphos) 'to write beside') is a self-contained unit of discourse in writing dealing with a particular point or idea. A paragraph consists of one or more sentences. Though not required by the syntax of any language. </p>
 </body>
 </html>
